--- a/python_practice_5_2025.ipynb
+++ b/python_practice_5_2025.ipynb
@@ -46,17 +46,27 @@
     "        return self.price*self.floors\n",
     "\n",
     "    def build(self):\n",
-    "        return f\"Building {self.name} ...\""
+    "        return f\"Building {self.name} ...\"\n",
+    "\n",
+    "print(int(3.9), int(-3.9))"
    ],
    "metadata": {
     "id": "-Vf895KaL88N",
     "ExecuteTime": {
-     "end_time": "2026-02-10T23:08:07.620872Z",
-     "start_time": "2026-02-10T23:08:07.616109Z"
+     "end_time": "2026-02-11T11:24:43.978694Z",
+     "start_time": "2026-02-11T11:24:43.972273Z"
     }
    },
-   "outputs": [],
-   "execution_count": 7
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 -3\n"
+     ]
+    }
+   ],
+   "execution_count": 28
   },
   {
    "cell_type": "markdown",
